2015-12-07 - TUI 0.9.2 - sea
* lists/web_gui: Renamed chromium -> chromium-browser
* docs/texi/fdl.texi: Included now in tui.texi
* configure.cfg: Removed docs/texi/fdl.texi from the INFO/HTML tasks.
* configure.cfg: Now checks if make was run or not
* tui-dd: Fixed and improved progress display
* tui-dd: Updated po file
* tui-wait: Fixed 'splitting' of hours and minutes
* tui-select: Updated return code

2015-12-03 - TUI 0.9.1 GNU RC23 - sea
* tui-rnd: Added permutation and random picked number lists
* tui-rnd: Updated po file
* scripts/prepare.sh: Added debug output if sourcing fails
* Fixed TERM setting in: tui-bol-gui, tui-bol-root, tui-cat(tui-printfile), 
*                        tui-conf-get, tui-conf-setm tui-echo(tui-print), 
*                        tui-printf(tui-printline), tui-log, tui-read,
*                        tui-status and tui-str-bol-conv
* Updated YASSI
* tui-dd: Displaying the progress stoped working... (in progress)

2015-11-27 - TUI 0.9.1 GNU RC22 - sea
* tui-conf-editor: Asks now wether saving empty variables if aborting/empty or not
* tui-conf-editor: Updated po file
* tui-conf-set: Fixed quoting for values with space
* tui-conf-set: Fixed leading space issue
* tui-conf-set: Fixed tempfile is removed now
* tui-read: Fixed spacing issue
* tui-read: Fixed non-empty requirement for default behaviour
* tui-typewriter: Added, extracted functionality from tui-printfile, former tui-cat
* tui-typewriter: Created po file
* ./configure: YASSI updated, made make work

2015-11-18 - TUI 0.9.0f
* RENAMED: tui-echo --> tui-print
* RENAMED: tui-printf --> tui-printline
* RENAMED: tui-cat --> tui-printfile
* Symlinks are currently preserved to keep existing scripts working.
* Enable regular options from cp, dd and mv for their tui counterparts (tui-cp, tui-mv, tui-dd).

2015-11-11 - TUI 0.9.0e
* Fixing display issues
* - status.conf
* - tui-asroot, tui-download, tui-mv, tui-progress, tui-wait
* Changed application defaults

2015-11-07 - TUI 0.9.0d