@@ -32,7 +32,7 @@
 	TERM="${TERM:-GNU\057Linux}"
 	break_on_injections "$@" && \
 		exit 1
-	script_version=0.9.2
+	script_version=0.9.3
 	ME="${0##*/}"
 #
 #	Translate preps
@@ -131,50 +131,36 @@ AUTHOR
 		*)		[ "-" = "${1:0:1}" ] && \
 					leadingDASHdummy="--" || \
 					leadingDASHdummy=""
-					;;
+				break;;
 		esac
 	done
 #
 #	Display
 #
-	if $doUnderstand
-	then	if [ "-" = "$1" ] || [ "--" = "$1" ]
-		then	# Do pipe handling, that is
-			while read LEFT CENTER RIGHT
-			do	set "$(echo -e $LEFT)" "$(echo -e $CENTER)" "$(echo -e $RIGHT)"
-				case $# in
-				0)	tui-print -${R}E  					;;
-				1)	tui-print -${R}E $leadingDASHdummy "$1"		;;
-				2)	tui-print -${R}E $leadingDASHdummy "$1" "$2" 	;;
-				3)	tui-print -${R}E $leadingDASHdummy "$1" "$2" "$3"	;;
-				esac
-			done
-		else	[ -n "$1" ] && one="$(echo -e $1)"
-			[ -n "$2" ] && two="$(echo -e $2)"
-			[ -n "$3" ] && three="$(echo -e $3)"
+	if [ "-" = "$1" ] || [ "--" = "$1" ]
+	then	# Do pipe handling
+		while read LEFT CENTER RIGHT
+		do	$doUnderstand && \
+				set "$(echo -e $LEFT)" "$(echo -e $CENTER)" "$(echo -e $RIGHT)" || \
+				set "$LEFT" "$CENTER" "$RIGHT"
 			case $# in
-			0)	tui-print -${R}E  					;;
-			1)	tui-print -${R}E $leadingDASHdummy "$one"		;;
-			2)	tui-print -${R}E $leadingDASHdummy "$one" "$two" 	;;
-			3)	tui-print -${R}E $leadingDASHdummy "$one" "$two" "$three"	;;
-			esac
-		fi
-	else	if [ "-" = "$1" ] || [ "--" = "$1" ]
-		then	# Do pipe handling
-			while read LEFT CENTER RIGHT
-			do	set "$LEFT" "$CENTER" "$RIGHT"
-				case $# in
-				0)	tui-print -${R}E  					;;
-				1)	tui-print -${R}E $leadingDASHdummy "$1"		;;
-				2)	tui-print -${R}E $leadingDASHdummy "$1" "$2" 	;;
-				3)	tui-print -${R}E $leadingDASHdummy "$1" "$2" "$3"	;;
-				esac
-			done
-		else	case $# in
 			0)	tui-print -${R}E  					;;
 			1)	tui-print -${R}E $leadingDASHdummy "$1"		;;
 			2)	tui-print -${R}E $leadingDASHdummy "$1" "$2" 	;;
 			3)	tui-print -${R}E $leadingDASHdummy "$1" "$2" "$3"	;;
 			esac
+		done
+	else	if $doUnderstand
+		then	unset one two three
+			[ -n "$1" ] && one="$(echo -e $1)"
+			[ -n "$2" ] && two="$(echo -e $2)"
+			[ -n "$3" ] && three="$(echo -e $3)"
+			set one two three
 		fi
+		case $# in
+		0)	tui-print -${R}E  					;;
+		1)	tui-print -${R}E $leadingDASHdummy "$1"		;;
+		2)	tui-print -${R}E $leadingDASHdummy "$1" "$2" 	;;
+		3)	tui-print -${R}E $leadingDASHdummy "$1" "$2" "$3"	;;
+		esac
 	fi
