@@ -32,7 +32,7 @@
 		else	[ -f  ./tuirc ] && \
 				source ./tuirc || source tuirc
 		fi
-		[ -z "$TUI_FILE_CONF_COLORS" ] && source [ -f /conf.tui/colors.conf ] && ./conf.tui/colors.conf
+		[ -z "$TUI_FILE_CONF_COLORS" ] && [ -f conf.tui/colors.conf ] && source conf.tui/colors.conf
 	fi
 	#source "$TUI_FILE_CONF_COLORS"
 	R="${TUI_COLOR_RESET}"
